--- a/index.htm
+++ b/index.htm
@@ -50,6 +50,16 @@
             </div>
         </div>
     </header>
+    <div class="decoration">
+        <div class="first-circle absolute full-fill"></div>
+        <div class="second-circle absolute full-fill"></div>
+        <div class="third-circle absolute full-fill"></div>
+        <div class="fourth-circle absolute full-fill"></div>
+        <img src="./assest/Ellipse 8.png" alt="fifth-circle" class="fifth-circle absolute">
+        <img src="./assest/Ellipse 10.png" alt="sixth-circle" class="sixth-circle absolute">
+        <img src="./assest/Ellipse 13.png" alt="seventh-circle" class="seventh-circle absolute">
+        <img src="./assest/Ellipse 14.png" alt="eighth-circle" class="eighth-circle absolute">
+    </div>
     
 </body>
 </html>
